--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+
+    <meta name="google-signin-client_id" content="9146551798-jq68qnvmjsudg9s4f4cofp4ff6c92jpr.apps.googleusercontent.com">
 
     <link rel="stylesheet" href="css/style.css">
     <script src="js/app.js"></script>
@@ -14,6 +17,8 @@
 
 <body>
     <h1>Hello World!<br>GoogleAPI Demo - OAK</h1>
+    <div class="g-signin2" data-onsuccess="onSignIn"></div>
+    <a href="test">test länk</a>
 </body>
 
 </html>
