--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <h1>Hello World!<br>GoogleAPI Demo - OAK</h1>
-    <div class="g-signin2" data-onsuccess="onSignIn"></div>
+    <div class="g-signin2" data-onsuccess="onSignIn" onclick="onSignIn()"></div>
     <a href="#" onclick="signOut();">Sign out</a>
     <a href="test">test länk</a>
 </body>
