--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
-
-    <meta name="google-signin-client_id" content="9146551798-jq68qnvmjsudg9s4f4cofp4ff6c92jpr.apps.googleusercontent.com">
-    <meta name="google-signin-scope" content="profile email">
 
     <link rel="stylesheet" href="css/style.css">
     <script src="js/app.js"></script>
@@ -17,25 +13,8 @@
 </head>
 
 <body>
-    <h1>Hello World!<br>GoogleAPI Demo - OAK</h1>
-
-    <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
-    <script>
-        function onSignIn(googleUser) {
-            // Useful data for your client-side scripts:
-            var profile = googleUser.getBasicProfile();
-            console.log("ID: " + profile.getId()); // Don't send this directly to your server!
-            console.log('Full Name: ' + profile.getName());
-            console.log('Given Name: ' + profile.getGivenName());
-            console.log('Family Name: ' + profile.getFamilyName());
-            console.log("Image URL: " + profile.getImageUrl());
-            console.log("Email: " + profile.getEmail());
-
-            // The ID token you need to pass to your backend:
-            var id_token = googleUser.getAuthResponse().id_token;
-            console.log("ID Token: " + id_token);
-        }
-    </script>
+    <h1>Home<br>GoogleAPI Demo - OAK</h1>
+    <a href="loggedIn">Logged in</a>
 
 </body>
 
