--- a/public/loggedIn.html
+++ b/public/loggedIn.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Logged in</title>
 </head>
 
 <body>
-    <h1>Det här är test välkommen</h1>
+    <h1>This is the logged in page</h1>
 </body>
 
 </html>
