--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <meta name="google-signin-client_id" content="296043091597-g7g0veurnl8dvmak0l8dnqftl3pimoao.apps.googleusercontent.com">
+
+
     <link rel="stylesheet" href="css/style.css">
     <script src="js/app.js"></script>
 
@@ -14,7 +18,14 @@
 
 <body>
     <h1>Home<br>GoogleAPI Demo - OAK</h1>
+
+    <div class="g-signin2" data-onsuccess="onSignIn"></div>
+
+    <a href="/">Home</a>
     <a href="loggedIn">Logged in</a>
+    <a href="terms">Terms of Service</a>
+    <a href="policy">Privacy Policy</a>
+
 
 </body>
 
