--- a/public/loggedIn.html
+++ b/public/loggedIn.html
@@ -10,6 +10,10 @@
 
 <body>
     <h1>This is the logged in page</h1>
+    <a href="/">Home</a>
+    <a href="loggedIn">Logged in</a>
+    <a href="terms">Terms of Service</a>
+    <a href="policy">Privacy Policy</a>
 </body>
 
 </html>
