with changes to project can now sign in, added sign out button and info about user

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <meta name="google-signin-client_id" content="296043091597-g7g0veurnl8dvmak0l8dnqftl3pimoao.apps.googleusercontent.com">
+    <meta name="google-signin-client_id" content="732451709774-58h1h3tbgr6c6c6ouce7lot3vh6d96u8.apps.googleusercontent.com">
 
 
     <link rel="stylesheet" href="css/style.css">
@@ -20,6 +20,7 @@
     <h1>Home<br>GoogleAPI Demo - OAK</h1>
 
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
+    <a href="#" onclick="signOut();">Sign out</a>
 
     <a href="/">Home</a>
     <a href="loggedIn">Logged in</a>
