--- a/public/loggedIn.html
+++ b/public/loggedIn.html
@@ -5,11 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <meta name="google-signin-client_id" content="732451709774-58h1h3tbgr6c6c6ouce7lot3vh6d96u8.apps.googleusercontent.com">
+
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/app.js"></script>
+
     <title>Logged in</title>
 </head>
 
 <body>
     <h1>This is the logged in page</h1>
+    <div class="g-signin2" data-onsuccess="onSignIn"></div>
+    <a href="#" onclick="signOut();">Sign out</a>
     <a href="/">Home</a>
     <a href="loggedIn">Logged in</a>
     <a href="terms">Terms of Service</a>
