--- a/public/terms.html
+++ b/public/terms.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <meta name="google-signin-client_id" content="732451709774-58h1h3tbgr6c6c6ouce7lot3vh6d96u8.apps.googleusercontent.com">
+
     <link rel="stylesheet" href="css/style.css">
     <script src="js/app.js"></script>
 
@@ -14,6 +17,8 @@
 
 <body>
     <h1>This is our Terms of Service page</h1>
+    <div class="g-signin2" data-onsuccess="onSignIn"></div>
+    <a href="#" onclick="signOut();">Sign out</a>
     <p>Terms of Service <br>Lorem ipsum dolor sit amet consectetur adipisicing elit. At molestias architecto necessitatibus praesentium aliquam dolor sint placeat distinctio tenetur, quo minus veniam quaerat iure blanditiis dolorum optio pariatur, hic aspernatur?Lorem
         ipsum dolor sit, amet consectetur adipisicing elit. Dolorum maiores exercitationem nobis inventore nisi assumenda ex repudiandae fuga beatae, molestiae omnis facere maxime architecto magnam optio, saepe consequuntur veniam deleniti!Lorem</p>
     <a href="/">Home</a>
