testing with showing user info in log, callback not working

--- a/public/loggedIn.html
+++ b/public/loggedIn.html
@@ -9,6 +9,8 @@
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <meta name="google-signin-client_id" content="732451709774-58h1h3tbgr6c6c6ouce7lot3vh6d96u8.apps.googleusercontent.com">
 
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+
     <link rel="stylesheet" href="css/style.css">
     <script src="js/app.js"></script>
 
@@ -24,6 +26,10 @@
     <a href="loggedIn">Logged in</a>
     <a href="terms">Terms of Service</a>
     <a href="policy">Privacy Policy</a>
+
+    <div id="g_id_onload" data-client_id="732451709774-58h1h3tbgr6c6c6ouce7lot3vh6d96u8.apps.googleusercontent.com" data-ux_mode="redirect" data-login_uri="http://localhost:8042/loggedIn" data-callback="handleCredentialResponse">
+    </div>
+    <div class="g_id_signin" data-type="standard"></div>
 
 </body>
 
