--- a/public/terms.html
+++ b/public/terms.html
@@ -9,6 +9,8 @@
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <meta name="google-signin-client_id" content="732451709774-58h1h3tbgr6c6c6ouce7lot3vh6d96u8.apps.googleusercontent.com">
 
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+
     <link rel="stylesheet" href="css/style.css">
     <script src="js/app.js"></script>
 
