trying to get user information with new way

--- a/public/index.html
+++ b/public/index.html
@@ -28,10 +28,10 @@
     <a href="terms">Terms of Service</a>
     <a href="policy">Privacy Policy</a>
 
-    <div id="g_id_onload" data-client_id="732451709774-58h1h3tbgr6c6c6ouce7lot3vh6d96u8.apps.googleusercontent.com" data-ux_mode="redirect" data-login_uri="http://localhost:8042/loggedIn" data-callback="handleCredentialResponse">
+    <div id="g_id_onload" data-client_id="732451709774-58h1h3tbgr6c6c6ouce7lot3vh6d96u8.apps.googleusercontent.com" data-callback="handleCredentialResponse">
     </div>
     <div class="g_id_signin" data-type="standard"></div>
-
+    </div>
 </body>
 
 </html>
