--- a/public/index.html
+++ b/public/index.html
@@ -64,6 +64,10 @@
             data-callback calls to whatever function is indicated,
             data-login_uri and data-callback are incompatible, only one can be used at a time
             data-login_uri takes precedence, therfore data-callback is not being used if data-login_uri is also used
+            If data-login_uri and data-ux_mode are removed you are no longer redirected but data-callback works
+            Workaorund probably exists
+            Look at this for more information about the two modes
+            https://developers.google.com/identity/gsi/web/guides/migration#the_new_way
         -->
 
         <div class="g_id_signin" data-type="standard"></div>
