even more comments

--- a/public/index.html
+++ b/public/index.html
@@ -68,6 +68,8 @@
             Workaorund probably exists
             Look at this for more information about the two modes
             https://developers.google.com/identity/gsi/web/guides/migration#the_new_way
+            If the personalized button is pressed user is automatically redirected
+            If One Tap is pressed handleCredentialResponse is called and user information is show in console log
         -->
 
         <div class="g_id_signin" data-type="standard"></div>
