having problems with heroku and incognito mode, unsure why

--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
         <script src="https://accounts.google.com/gsi/client" async defer></script>
         <!-- Calls to the Google library -->
 
-        <div id="g_id_onload" data-client_id="732451709774-58h1h3tbgr6c6c6ouce7lot3vh6d96u8.apps.googleusercontent.com" data-ux_mode="redirect" data-login_uri="http://localhost:8042/loggedIn" data-callback="handleCredentialResponse"></div>
+        <div id="g_id_onload" data-client_id="732451709774-58h1h3tbgr6c6c6ouce7lot3vh6d96u8.apps.googleusercontent.com" data-ux_mode="redirect" data-login_uri="/loggedIn" data-callback="handleCredentialResponse"></div>
         <!-- 
             data-client_id is the key created when making a new credential, 
             data-ux_mode specifies which mode to be used, popup is default,
