--- a/public/index.html
+++ b/public/index.html
@@ -12,25 +12,17 @@
     <title>GoogleAPI Demo - OAK</title>
 </head>
 
+<!-- 
+    TODO LIST
+    redirect with popup
+    remove on tap from log in
+    DOCUMENTATION
+    send token to server
+    look into problem with heroku and incognito
+ -->
+
 <body>
     <h1>Home<br>GoogleAPI Demo - OAK</h1>
-
-    <div>
-        <!-- This is the old way and should not be used anymore
-            Link to documentation
-            https://developers.google.com/identity/gsi/web/guides/migration#the_old_way -->
-
-        <script src="https://apis.google.com/js/platform.js" async defer></script>
-        <meta name="google-signin-client_id" content="732451709774-58h1h3tbgr6c6c6ouce7lot3vh6d96u8.apps.googleusercontent.com">
-        <!-- Calls to Google libraries -->
-
-        <div class="g-signin2" data-onsuccess="onSignIn"></div>
-        <!-- Shows the sign in button, changed to "Signed in" after successful log in -->
-        <a href="#" onclick="signOut();">Sign out</a>
-        <!-- When pressed calls to a function that signs out user, does not affect new way -->
-    </div>
-
-    <hr>
 
     <a href="/">Home</a>
     <a href="loggedIn">Logged in</a>
@@ -56,7 +48,7 @@
         <script src="https://accounts.google.com/gsi/client" async defer></script>
         <!-- Calls to the Google library -->
 
-        <div id="g_id_onload" data-client_id="732451709774-58h1h3tbgr6c6c6ouce7lot3vh6d96u8.apps.googleusercontent.com" data-ux_mode="redirect" data-login_uri="/loggedIn" data-callback="handleCredentialResponse"></div>
+        <div id="g_id_onload" data-client_id="732451709774-58h1h3tbgr6c6c6ouce7lot3vh6d96u8.apps.googleusercontent.com" data-ux_mode="redirect" data-login_uri="http://localhost:8042/loggedIn" data-callback="handleCredentialResponse"></div>
         <!-- 
             data-client_id is the key created when making a new credential, 
             data-ux_mode specifies which mode to be used, popup is default,
