--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,10 @@
 
 <!-- 
     TODO LIST
-    redirect with popup
-    remove on tap from log in
     DOCUMENTATION
+    show info on redirect
     send token to server
-    look into problem with heroku and incognito
+    user gets logged out when refreshing page
  -->
 
 <body>
@@ -33,7 +32,6 @@
 
     <div>
         <!-- 
-            This is the new way and should be used 
             This whole div could be called personalized button, redirect mode
             Because button apperance can change and user is redirected after sign in
             Another way is "One Tap" which is used also used (top right of screen on web)
@@ -45,32 +43,53 @@
             https://developers.google.com/identity/gsi/web/guides/migration#the_new_way 
         -->
 
-        <script src="https://accounts.google.com/gsi/client" async defer></script>
         <!-- Calls to the Google library -->
+        <script src="https://accounts.google.com/gsi/client" async defer></script>
 
-        <div id="g_id_onload" data-client_id="732451709774-58h1h3tbgr6c6c6ouce7lot3vh6d96u8.apps.googleusercontent.com" data-ux_mode="redirect" data-login_uri="http://localhost:8042/loggedIn" data-callback="handleCredentialResponse"></div>
         <!-- 
             data-client_id is the key created when making a new credential, 
             data-ux_mode specifies which mode to be used, popup is default,
             data-login_uri specifies where to go after sign in, currently goes to loggedIn.html,
             data-callback calls to whatever function is indicated,
             data-login_uri and data-callback are incompatible, only one can be used at a time
-            data-login_uri takes precedence, therfore data-callback is not being used if data-login_uri is also used
-            If data-login_uri and data-ux_mode are removed you are no longer redirected but data-callback works
+            If redirect mode is being used, data-login_uri takes precedence
+            If popup mode is being used, data-callback takes precedence
             Workaorund probably exists
             Look at this for more information about the two modes
             https://developers.google.com/identity/gsi/web/guides/migration#the_new_way
             If the personalized button is pressed user is automatically redirected
             If One Tap is pressed handleCredentialResponse is called and user information is show in console log
-        -->
+            data-auto_prompt specifies if One Tap is to be shown or not, should not be shown in log in page
+            https://developers.google.com/identity/gsi/web/tools/configurator
+            https://developers.google.com/identity/gsi/web/reference/html-reference#data-attributes
+            -->
+        <div id="g_id_onload" data-client_id="732451709774-58h1h3tbgr6c6c6ouce7lot3vh6d96u8.apps.googleusercontent.com" data-context="signin" data-auto_prompt="false" data-ux_mode="redirect" data-login_uri="http://localhost:8042/loggedIn" data-callback="handleCredentialResponse"></div>
 
+        <!-- This is the sign in button -->
         <div class="g_id_signin" data-type="standard"></div>
-        <!-- 
-            This is visual representation of the button
-            does not change after successful log in, unlike old way
-        -->
     </div>
 
+    <button onclick="showCookies()">Show cookies</button>
+
+    <button onclick="clearOutputCookies()">
+      Clear
+    </button>
+
+    <div>
+        <code id="cookies"></code>
+    </div>
+    <hr>
+    <button onclick="checkCookieHasASpecificValue()">
+        Check that a cookie has a specific value
+      </button>
+
+    <button onclick="clearASpecificValueOfTheCookie()">
+        Clear
+      </button>
+
+    <div>
+        <code id="a-specific-value-of-the-cookie"></code>
+    </div>
 </body>
 
 </html>
