updated to do list

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,10 @@
     show info on redirect
     send token to server
     user gets logged out when refreshing page
+    cookies
+    get cookies serverside
+    send cookies to client
+    put user info in cookies
  -->
 
 <body>
