--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,7 @@
 
 <!-- 
     TODO LIST
-    DOCUMENTATION
-    show info on redirect
+    show info on redirect (maybe not possible or needed)
     send token to server
     user gets logged out when refreshing page
     cookies
