Prepared fore heroku

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
 
         <!-- This line of code controls how the sign in button and page in general behaves when it comes to Googles sign in API -->
         <div id="g_id_onload" data-client_id="623398996009-sh4vrk42s5ri02ji4g9mokh8maiaroe4.apps.googleusercontent.com" data-context="signin" 
-        data-auto_prompt="false" data-ux_mode="redirect" data-login_uri="http://localhost:8080/loggedIn" data-callback="handleCredentialResponse"></div>
+        data-auto_prompt="false" data-ux_mode="redirect" data-login_uri="https://radiant-journey-73260.herokuapp.com/loggedIn" data-callback="handleCredentialResponse"></div>
 
         <!-- This is the sign in button -->
         <div class="g_id_signin" data-type="standard"></div>
