--- a/public/loggedIn.html
+++ b/public/loggedIn.html
@@ -12,11 +12,11 @@
     
     <script src="js/app.js"></script>
 
-    <title>GoogleAPI Demo - OAK - Logged in</title>
+    <title>GoogleAPI Demo - Ice + William - Logged in</title>
 </head>
 
 <body>
-    <h1>Logged in <br> GoogleAPI Demo - OAK</h1>
+    <h1>Logged in <br> GoogleAPI Demo - Ice + William</h1>
 
     <a href="/">Home</a>
     <a href="loggedIn">Logged in</a>
